[gd_scene load_steps=9 format=3 uid="uid://dalx7sqpnbojw"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_qrme6"]
[ext_resource type="Texture2D" uid="uid://dhcatemrwll2s" path="res://Assets/textures/bg.png" id="1_w8ssy"]
[ext_resource type="PackedScene" uid="uid://xanp3klqhgcm" path="res://Scenes/player.tscn" id="2_8jh5o"]
[ext_resource type="PackedScene" uid="uid://q2rec07c0grf" path="res://Scenes/hud.tscn" id="2_ubwkh"]
[ext_resource type="PackedScene" uid="uid://cf1ufhlfxjodr" path="res://Scenes/enemy_spawner.tscn" id="3_nko6t"]
[ext_resource type="AudioStream" uid="uid://b3ixr3btthpdi" path="res://Assets/audio/hit.wav" id="6_qjcka"]
[ext_resource type="AudioStream" uid="uid://bqvweuari3w3r" path="res://Assets/audio/explode.wav" id="7_5my18"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2t54k"]
size = Vector2(20, 792)

[node name="Game" type="Node2D"]
script = ExtResource("1_qrme6")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_ubwkh")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1289.0
offset_bottom = 720.0
texture = ExtResource("1_w8ssy")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_8jh5o")]
position = Vector2(40, 357)

[node name="EnemySpawner" parent="." instance=ExtResource("3_nko6t")]

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(-57, 4)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(0, 350)
shape = SubResource("RectangleShape2D_2t54k")

[node name="EnemyHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qjcka")

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5my18")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
